Disable profile shortcuts if the user data directory is overridden in any way.

Previously the profile shortcut manager was only disabled if the user
data directory was overridden via the --user-data-dir command line flag.
Some (unit) tests use ScopedPathOverride however, which bypasses the
command line flag.

We now compare the value of the USER_DATA_DIR path to the
programmatically-defined default value instead.

Bug: 733861
Change-Id: I85854ba0821a0e41d28abfd8d5ec2f0873941aab