chrome/browser/profiles/profile_shortcut_manager_win.cc
@@ -779,8 +779,16 @@ base::string16 CreateProfileShortcutFlags(const base::FilePath& profile_path) {
 // static
 bool ProfileShortcutManager::IsFeatureEnabled() {
   base::CommandLine* command_line = base::CommandLine::ForCurrentProcess();
-  return command_line->HasSwitch(switches::kEnableProfileShortcutManager) ||
-         !command_line->HasSwitch(switches::kUserDataDir);
+  if (command_line->HasSwitch(switches::kEnableProfileShortcutManager))
+    return true;
+
+  base::FilePath user_data_dir;
+  bool success = base::PathService::Get(chrome::USER_DATA_DIR, &user_data_dir);
+  DCHECK(success);
+  base::FilePath default_user_data_dir;
+  success = chrome::GetDefaultUserDataDirectory(&default_user_data_dir);
+  DCHECK(success);
+  return user_data_dir == default_user_data_dir;
 }
 
 // static
